RESOLVED FIXED275371
[WebGPU] RenderBundleEncoder will crash if Device is destroyed before calling GPURenderBundleEncoder.finish()
https://bugs.webkit.org/show_bug.cgi?id=275371
Summary [WebGPU] RenderBundleEncoder will crash if Device is destroyed before calling...
Mike Wyrzykowski
Reported 2024-06-11 14:02:44 PDT
[WebGPU] RenderBundleEncoder will crash if Device is destroyed before calling GPURenderBundleEncoder.finish()
Attachments
Mike Wyrzykowski
Comment 1 2024-06-11 14:02:58 PDT
Mike Wyrzykowski
Comment 2 2024-06-11 14:32:10 PDT
EWS
Comment 3 2024-06-11 18:25:56 PDT
Committed 279935@main (e91b9416d35d): <https://commits.webkit.org/279935@main> Reviewed commits have been landed. Closing PR #29724 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.