[WebGPU] RenderBundleEncoder will crash if Device is destroyed before calling GPURenderBundleEncoder.finish() https://bugs.webkit.org/show_bug.cgi?id=275371 <radar://129605612>

Reviewed by Dan Glastonbury.

If the MTLDevice is destroyed, then we should skip attempting to perform
any work in finish() or replayCommands().

Specifically the crash occurs because the dynamic offsets buffer can not
be allocated on a MTLDevice which is nil.

* LayoutTests/fast/webgpu/nocrash/fuzz-275371-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-275371.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::finish):
(WebGPU::RenderBundleEncoder::replayCommands):

Canonical link: https://commits.webkit.org/279935@main